--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-im here
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>ish</title>
+  <meta name="author" content="name">
+  <meta name="description" content="description here">
+  <meta name="keywords" content="keywords,here">
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  </head>
+  <body>
+	  <div class="container1">
+	  	<div class="container2">
+	  	<h1>I'm Ish. I want to be a
+			  <span
+			     class="txt-rotate"
+			     id="h2"
+			     data-period="3000"
+			     data-rotate='[ "graphic", "web", "product", "nerdy", "visual", "ui", "humble", "f*cking great", "thoughtful", "stupid", "studious", "always wanting to be a designer" ]'>
+			  </span>
+			designer when I grow up.
+		</h1>
+	  	</div>
+	  </div>
+
+	  <script type="text/javascript">
+	  	var TxtRotate = function(el, toRotate, period) {
+		  this.toRotate = toRotate;
+		  this.el = el;
+		  this.loopNum = 0;
+		  this.period = parseInt(period, 10) || 2000;
+		  this.txt = '';
+		  this.tick();
+		  this.isDeleting = false;
+		};
+
+		TxtRotate.prototype.tick = function() {
+		  var i = this.loopNum % this.toRotate.length;
+		  var fullTxt = this.toRotate[i];
+
+		  if (this.isDeleting) {
+		    this.txt = fullTxt.substring(0, this.txt.length - 1);
+		  } else {
+		    this.txt = fullTxt.substring(0, this.txt.length + 1);
+		  }
+
+		  this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+		  var that = this;
+		  var delta = 300 - Math.random() * 100;
+
+		  if (this.isDeleting) { delta /= 2; }
+
+		  if (!this.isDeleting && this.txt === fullTxt) {
+		    delta = this.period;
+		    this.isDeleting = true;
+		  } else if (this.isDeleting && this.txt === '') {
+		    this.isDeleting = false;
+		    this.loopNum++;
+		    delta = 500;
+		  }
+
+		  setTimeout(function() {
+		    that.tick();
+		  }, delta);
+		};
+
+		window.onload = function() {
+		  var elements = document.getElementsByClassName('txt-rotate');
+		  for (var i=0; i<elements.length; i++) {
+		    var toRotate = elements[i].getAttribute('data-rotate');
+		    var period = elements[i].getAttribute('data-period');
+		    if (toRotate) {
+		      new TxtRotate(elements[i], JSON.parse(toRotate), period);
+		    }
+		  }
+		  // INJECT CSS
+		  var css = document.createElement("style");
+		  css.type = "text/css";
+		  css.innerHTML = ".txt-rotate > .wrap { border-right: 0 solid #666 }";
+		  document.body.appendChild(css);
+		};
+	  </script>
+  </body>
+</html>
