--- a/index.html
+++ b/index.html
@@ -1,89 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>ish</title>
-  <meta name="author" content="name">
-  <meta name="description" content="description here">
-  <meta name="keywords" content="keywords,here">
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
-  </head>
-  <body>
-	  <div class="container1">
-	  	<div class="container2">
-	  	<h1>I'm Ish. I want to be a
-			  <span
-			     class="txt-rotate"
-			     id="h2"
-			     data-period="2000"
-			     data-rotate='[ "graphic", "web", "product", "nerdy", "visual", "ui", "humble", "f*cking great", "thoughtful", "stupid", "studious", "always wanting to be a designer" ]'>
-			  </span>
-			designer when I grow up.
-		</h1>
-	  	</div>
-	  </div>
+    <meta name="author" content="name">
+    <meta name="description" content="description here">
+    <meta name="keywords" content="keywords,here">
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <script type="text/javascript" src="js/want.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+</head>
 
-	  <script type="text/javascript">
-	  	var TxtRotate = function(el, toRotate, period) {
-		  this.toRotate = toRotate;
-		  this.el = el;
-		  this.loopNum = 0;
-		  this.period = parseInt(period, 10) || 2000;
-		  this.txt = '';
-		  this.tick();
-		  this.isDeleting = false;
-		};
+<body>
+    <div class="container1">
+        <div class="container2">
+        	<div class="top-container">
+	            <h1>I'm Ish. I want to be a
+	                <span class="txt-rotate" id="h1-bold" data-period="2000" data-rotate='[ "graphic", "web", "product", "visual", "ux/ui", "humble", "f*cking great", "thoughtful", "stupid", "curious", "always wanting to be a designer" ]'>
+					  </span>
+	                <span id="h1-bold">designer</span> when I grow up.
+	            </h1>
+        	</div>
 
-		TxtRotate.prototype.tick = function() {
-		  var i = this.loopNum % this.toRotate.length;
-		  var fullTxt = this.toRotate[i];
+            <div class="wrap-collabsible">
+                <input id="collapsible" class="toggle" type="checkbox">
+                <label for="collapsible" class="lbl-toggle">
+					<h3 class="showhim">
+						<span id="h1-bold">
+						Vibrato
+						</span> 
+						is
+						<span class="ok">
+							sounds visualized.
+						</span>
+						<span class="showme txt-rotate"
+					     data-period="500"
+					     data-rotate='[ "my passion project.", "a website.", "ecommerce.", "my side hustle.", "my Im a CEO too - project." ]'>
+						</span>
+			  		</h3>
+			  	</label>
+                <div class="collapsible-content">
+                    <div class="content-inner">
+                        <h4>
+                            QUnit is by calling one of the object that are embedded in JavaScript, and faster JavaScript program could also used with its elegant, well documented, and functional programming using JS, HTML pages Modernizr is a popular browsers without plug-ins. Test-Driven Development.
+                        </h4>
+                    </div>
+                </div>
+            </div>
 
-		  if (this.isDeleting) {
-		    this.txt = fullTxt.substring(0, this.txt.length - 1);
-		  } else {
-		    this.txt = fullTxt.substring(0, this.txt.length + 1);
-		  }
+            <div class="wrap-collabsible">
+                <input id="collapsible2" class="toggle" type="checkbox">
+                <label for="collapsible2" class="lbl-toggle2">
+					<h3 class="showhim">
+						<span id="h1-bold">
+						Foursquare
+						</span> 
+						is
+						<span class="ok">
+							sounds visualized.
+						</span>
+						<span class="showme txt-rotate"
+					     data-period="500"
+					     data-rotate='[ "my passion project.", "a website.", "ecommerce.", "my side hustle.", "my Im a CEO too - project." ]'>
+						</span>
+			  		</h3>
+			  	</label>
+                <div class="collapsible-content2">
+                    <div class="content-inner">
+                        <h4>
+                            QUnit is by calling one of the object that are embedded in JavaScript, and faster JavaScript program could also used with its elegant, well documented, and functional programming using JS, HTML pages Modernizr is a popular browsers without plug-ins. Test-Driven Development.
+                        </h4>
+                    </div>
+                </div>
+            </div>
 
-		  this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+        </div>
+    </div>
 
-		  var that = this;
-		  var delta = 300 - Math.random() * 100;
+</body>
 
-		  if (this.isDeleting) { delta /= 2; }
-
-		  if (!this.isDeleting && this.txt === fullTxt) {
-		    delta = this.period;
-		    this.isDeleting = true;
-		  } else if (this.isDeleting && this.txt === '') {
-		    this.isDeleting = false;
-		    this.loopNum++;
-		    delta = 500;
-		  }
-
-		  setTimeout(function() {
-		    that.tick();
-		  }, delta);
-		};
-
-		window.onload = function() {
-		  var elements = document.getElementsByClassName('txt-rotate');
-		  for (var i=0; i<elements.length; i++) {
-		    var toRotate = elements[i].getAttribute('data-rotate');
-		    var period = elements[i].getAttribute('data-period');
-		    if (toRotate) {
-		      new TxtRotate(elements[i], JSON.parse(toRotate), period);
-		    }
-		  }
-		  // INJECT CSS
-		  var css = document.createElement("style");
-		  css.type = "text/css";
-		  css.innerHTML = ".txt-rotate > .wrap { border-right: 0 solid #666 }";
-		  document.body.appendChild(css);
-		};
-	  </script>
-  </body>
 </html>
