--- a/index2.html
+++ b/index2.html
@@ -59,19 +59,10 @@
 	                        </h4>
 	                        <ul class="credits">
 							  <li class="credit">Role<p class="list-d">Founder<br />Designer</p></li>
-							  <li class="credit">Art Direction<a href="http://ashleylangan.com" target="new"><p class="list-d">Ashley Langan <i class="fa fa-angle-right"></i></p></a></li>
-							  <li class="credit">Press<a href="https://creators.vice.com/en_us/article/qvpax5/turn-your-favorite-song-into-ink-splotch-vibrato" target="new"><p class="list-d">VICE <i class="fa fa-angle-right"></i></a><br />
-							  	<a href="https://design-milk.com/vibrato-wall-art/" target="new">Design Milk <i class="fa fa-angle-right"></i></a><br />
-							  	<a href="https://design-milk.com/vibrato-wall-art/" target="new">Design Milk <i class="fa fa-angle-right"></i></p></a></li>
+							  <li class="credit">Art Direction</li>
+							  <li class="credit">Press</li>
+							  <li class="credit" >Press</li>
 							</ul>
-	                    </div>
-	                    <div class="cta">
-	                    	<a href="https://vibrato.us" target="new">
-	                        <ul class="cta-list">
-							  <li class="cta-list1">view project</li>
-							  <li class="cta-list1 cta-arrow"><i class="fa fa-angle-right"></i></li>
-							</ul>
-							</a>
 	                    </div>
 	                </div>
 	            </div>
@@ -89,34 +80,15 @@
 							</span>
 							<span class="showme txt-rotate"
 						     data-period="500"
-						     data-rotate='[ "an app company.", "inventing the future.", "a data hive." ]'>
+						     data-rotate='[ "my passion project.", "a website.", "ecommerce.", "my side hustle.", "my Im a CEO too project." ]'>
 							</span>
 				  		</h3>
-				  		<ul class="tags">
-							  <li class="tag">Branding</li>
-							  <li class="tag">Web Design</li>
-							  <li class="tag">front end dev</li>
-							  <li class="tag">UX/UI</li>
-						</ul>
 				  	</label>
 	                <div class="collapsible-content2">
 	                    <div class="content-inner">
 	                        <h4>
-	                            Born from a desire to organically visualize music, Vibrato is a passion project that allows anyone to share their sounds with me and in return get a beautiful print in return... for a price.
+	                            QUnit is by calling one of the object that are embedded in JavaScript, and faster JavaScript program could also used with its elegant, well documented, and functional programming using JS, HTML pages Modernizr is a popular browsers without plug-ins. Test-Driven Development.
 	                        </h4>
-	                        <ul class="credits">
-							  <li class="credit">Role<p class="list-d">Founder<br />Designer</p></li>
-							  <li class="credit">Art Direction<a href="http://ashleylangan.com" target="new"><p class="list-d">Ashley Langan <i class="fa fa-angle-right"></i></p></a></li>
-							  <li class="credit">Press</li>
-							</ul>
-	                    </div>
-	                    <div class="cta">
-	                    	<a href="https://vibrato.us" target="new">
-	                        <ul class="cta-list">
-							  <li class="cta-list1">view project</li>
-							  <li class="cta-list1 cta-arrow"><i class="fa fa-angle-right"></i></li>
-							</ul>
-							</a>
 	                    </div>
 	                </div>
 	            </div>
