--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
-    <link rel="shortcut icon" href="🤘" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="metal.ico" type="image/vnd.microsoft.icon">
     <script type="text/javascript" src="js/want.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
