--- a/02/index.html
+++ b/02/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB" itemscope itemtype="http://schema.org/WebPage">
 
 <head>
-    <title>Ismael Ish Sanchez</title>
+    <title>Ismael Ish Sanchez • Design Portfolio</title>
 
     <!-- image meta data -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -26,7 +26,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=robots content="index,follow">
-    <meta name="description" content="🤘 I'm Ish. I want to be a designer when I grow up. Currently growing at Uber.">
+    <meta name="description" content="🤘 People call me Ish. I'm a [Visual, UX/UI, Motion] Designer, currently at Uber focused primarily on JUMP.">
     <meta name="keywords" content="Ismael, Sanchez, Ish, Designer, Graphic, UX/UI, Web, Foursquare, Uber, Caskers, Flaviar, Vibrato, JUMP by Uber, Visual, Web">
     <meta name="author" content="Ismael Ish Sanchez">
     <link rel="canonical" href="http://ish.design">
@@ -136,7 +136,7 @@
                 <h4>Work</h4>
             </div>
         </div>
-        <!-- Vibrato START -->
+        <!-- jump web system START -->
         <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
               <a href="projects/jump-design-system.html" class="hvr-icon-forward project showhim">
@@ -155,8 +155,8 @@
               </a>
             </div>
         </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
+        <!-- jump web system END -->
+        <!-- jump motion design START -->
         <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
               <a href="projects/jump-motion-design.html" class="hvr-icon-forward project showhim">
@@ -176,9 +176,9 @@
               </a>
             </div>
         </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
-        <div class="row center-xs">
+        <!-- jump motion design END -->
+        <!-- visit  data visulizer START -->
+        <!-- <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
               <a href="#" class="hvr-icon-forward project showhim">
                 <p>2019&nbsp; • &nbsp;Foursquare</p>
@@ -198,15 +198,15 @@
               </ul>
               </a>
             </div>
-        </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
+        </div> -->
+        <!-- visit  data visulizer END -->
+        <!-- enterprise site START -->
         <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
-              <a href="#" class="hvr-icon-forward project showhim">
+              <a href="projects/enterprise-site.html" class="hvr-icon-forward project showhim">
                 <p>2018&nbsp; • &nbsp;Foursquare</p>
                 <h3>
-                  <b>enterprise site</b><br />is <span class="ok">a location tech company.</span>
+                  <b>enterprise site</b><br />is <span class="ok">a tech company pivot.</span>
                   <span class="showme txt-rotate"
                      data-period="500"
                      data-rotate='[ "a data aggregator.", "a consumer app company.", "a B2B enterprise company." ]'>
@@ -222,32 +222,32 @@
               </a>
             </div>
         </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
+        <!-- enterprise site END -->
+        <!-- developer site START -->
         <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
-              <a href="#" class="hvr-icon-forward project showhim">
+              <a href="projects/developer-site.html" class="hvr-icon-forward project showhim">
                 <p>2017&nbsp; • &nbsp;Foursquare</p>
                 <h3>
-                  <b>developer site</b><br />is <span class="ok">music visualized.</span>
+                  <b>developer site</b><br />is <span class="ok">a gateway for developers to Foursqaure tools and data.</span>
                   <span class="showme txt-rotate"
                      data-period="500"
-                     data-rotate='[ "my passion project.", "a website.", "ecommerce.", "my side hustle.", "my &ldquo;Im a CEO too&rdquo; project." ]'>
+                     data-rotate='[ "a suite of dev tools.", "a source of foursquare information for developers.", "a marketing site." ]'>
                   </span>
                 </h3>
               <ul class="tags">
+                <li class="tag">UX/UI Designer</li>
+                <li class="tag">Interaction Designer</li>
+                <li class="tag">Visual Design</li>
+                <li class="tag">Illustrator</li>
                 <li class="tag">Branding</li>
-                <li class="tag">Web Design</li>
-                <li class="tag">front end dev</li>
-                <li class="tag">UX/UI</li>
-                <li class="tag">product design</li>
               </ul>
               </a>
             </div>
         </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
-        <div class="row center-xs">
+        <!-- developer site END -->
+        <!-- web design system START -->
+        <!-- <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
               <a href="#" class="hvr-icon-forward project showhim">
                 <p>2017&nbsp; • &nbsp;Foursquare</p>
@@ -267,10 +267,10 @@
               </ul>
               </a>
             </div>
-        </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
-        <div class="row center-xs">
+        </div> -->
+        <!-- web design system END -->
+        <!-- Enterprise Rebrand & Framework START -->
+        <!-- <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
               <a href="#" class="hvr-icon-forward project showhim">
                 <p>2017&nbsp; • &nbsp;Foursquare</p>
@@ -290,10 +290,10 @@
               </ul>
               </a>
             </div>
-        </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
-        <div class="row center-xs">
+        </div> -->
+        <!-- Enterprise Rebrand & Framework END -->
+        <!-- Year End Review START -->
+        <!-- <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
               <a href="#" class="hvr-icon-forward project showhim">
                 <p>2016&nbsp; • &nbsp;Caskers</p>
@@ -313,18 +313,18 @@
               </ul>
               </a>
             </div>
-        </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
+        </div> -->
+        <!-- Year End Review END -->
+        <!-- Email Redesign START -->
         <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
-              <a href="#" class="hvr-icon-forward project showhim">
+              <a href="https://www.behance.net/gallery/43920969/Caskers-Email-Redesign" class="hvr-icon-forward project showhim" target="new">
                 <p>2015&nbsp; • &nbsp;Caskers</p>
                 <h3>
-                  <b>Email Redesign</b><br />is <span class="ok">music visualized.</span>
+                  <b>Email Redesign</b><br />is <span class="ok">a re-thinking of the ecommerce email.</span>
                   <span class="showme txt-rotate"
                      data-period="500"
-                     data-rotate='[ "my passion project.", "a website.", "ecommerce.", "my side hustle.", "my &ldquo;Im a CEO too&rdquo; project." ]'>
+                     data-rotate='[ "personalized email.", "data & user behavior driven.", "as D2C as liquor can get." ]'>
                   </span>
                 </h3>
               <ul class="tags">
@@ -337,9 +337,9 @@
               </a>
             </div>
         </div>
-        <!-- Vibrato END -->
-        <!-- Vibrato START -->
-        <div class="row center-xs">
+        <!-- Email Redesign END -->
+        <!-- Brand Shops START -->
+        <!-- <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-6 hvr-underline-from-center2">
               <a href="#" class="hvr-icon-forward project showhim">
                 <p>2015&nbsp; • &nbsp;Caskers</p>
@@ -359,8 +359,8 @@
               </ul>
               </a>
             </div>
-        </div>
-        <!-- Vibrato END -->
+        </div> -->
+        <!-- Brand Shops END -->
     </section>
     <hr>
     <footer>
