--- a/02/index.html
+++ b/02/index.html
@@ -124,7 +124,7 @@
                         <b>
                         <span class="txt-rotate" data-period="1500" data-rotate='[ "graphic", "product", "visual", "ux/ui", "humble", "f*cking&nbsp;great", "thoughtful", "risk&nbsp;taking", "curious", "never&nbsp;stops&nbsp;growing" ]'></span>
                         designer</b>
-                        <br /> when I grow up. Currently growing at <a href="#" class="hvr-underline-from-center">Uber</a>, working primarily on <a href="#" class="hvr-underline-from-center">JUMP</a>.
+                        <br /> when I grow up. Currently growing at <a href="https://uber.com" class="hvr-underline-from-center">Uber</a>, working primarily on <a href="https://jump.com" class="hvr-underline-from-center">JUMP</a>.
                     </h1>
                 </div>
             </div>
