--- a/projects/enterprise-site.html
+++ b/projects/enterprise-site.html
@@ -133,7 +133,7 @@
             <div class="col-xs-12 col-md-3 col-lg-4">
                 <h2 class="project-description">A site highlighting Foursquare's pivot from just consumer facing apps, to a suite of enterprise-grade location intelligence tools and services.</h2>
                 <div id="controls" style="display: inline-block; position: relative;">
-                    <span class="playpause"><span class='footnote'>VISIT SITE</span> &#xf061;</span>
+                    <a href="https://enterprise.foursquare.com"><span class="playpause"><span class='footnote'>VISIT SITE</span> &#xf061;</span></a>
                  </div>
             </div>
         </div>
