--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=robots content="index,follow">
-    <meta name="description" content="🤘 People call me Ish. I'm a [Visual, UX/UI, Motion] Designer, currently at Uber focused primarily on JUMP.">
-    <meta name="keywords" content="Ismael, Sanchez, Ish, Designer, Graphic, UX/UI, Web, Foursquare, Uber, Caskers, Flaviar, Vibrato, JUMP by Uber, Visual, Web">
+    <meta name="description" content="🤘 People call me Ish. I'm a [Visual, UX/UI, Motion] Designer, currently at Revel focused primarily on Brand.">
+    <meta name="keywords" content="Ismael, Sanchez, Ish, Designer, Graphic, UX/UI, Web, Foursquare, Uber, Caskers, Flaviar, Vibrato, JUMP by Uber, Visual, Web, Revel, Scooters, Mopeds">
     <meta name="author" content="Ismael Ish Sanchez">
     <link rel="canonical" href="http://ish.design">
     <meta name="subject" content="Portfolio">
@@ -41,7 +41,7 @@
     <meta http-equiv='imagetoolbar' content='no'>
     <meta http-equiv='x-dns-prefetch-control' content='off'>
     <!-- Twitter Card data https://dev.twitter.com/cards/overview -->
-    <meta name="twitter:card" content="🤘 I'm Ish. I want to be a designer when I grow up, currently growing at Uber.">
+    <meta name="twitter:card" content="🤘 I'm Ish. I want to be a designer when I grow up, currently growing at Revel.">
     <meta name="twitter:site" content="http://ish.design">
     <meta name="twitter:title" content="Ismael Ish Sanchez">
     <meta name="twitter:description" content="A design portfolio">
@@ -52,7 +52,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://ish.design" />
     <meta property="og:image" content="tile-wide.png" />
-    <meta property="og:description" content="🤘 I'm Ish. I want to be a designer when I grow up, currently growing at Uber.">
+    <meta property="og:description" content="🤘 I'm Ish. I want to be a designer when I grow up, currently growing at Revel.">
     <meta property="og:site_name" content="Ismael Ish Sanchez" />
 
     <link rel="manifest" href="site.webmanifest">
@@ -124,7 +124,7 @@
                         <b>
                         <span class="txt-rotate" data-period="1500" data-rotate='[ "graphic", "product", "visual", "ux/ui", "humble", "f*cking&nbsp;great", "thoughtful", "risk&nbsp;taking", "curious", "never&nbsp;stops&nbsp;growing" ]'></span>
                         designer</b>
-                        <br /> when I grow up. Currently growing at <a href="https://uber.com" class="hvr-underline-from-center">Uber</a>, working primarily on <a href="https://jump.com" class="hvr-underline-from-center">JUMP</a>.
+                        <br /> when I grow up. Currently growing at <a href="https://gorevel.com" class="hvr-underline-from-center">Revel</a>, working primarily on Brand, Marketing & Visual Design.
                     </h1>
                 </div>
             </div>
